<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:background="@drawable/gradient"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/txtUname"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:background="#6ef4f4f4"
        android:backgroundTint="#11000000"
        android:drawableLeft="@drawable/ic_action_user"
        android:drawablePadding="78dp"
        android:ems="1"
        android:fontFamily="monospace"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColorHint="#fff"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtPasswd"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:background="#6ef4f4f4"
        android:backgroundTint="#11000000"
        android:drawableLeft="@drawable/ic_action_password"
        android:drawablePadding="78dp"
        android:ems="1"
        android:fontFamily="monospace"
        android:hint="@string/string"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColorHint="#fff"
        android:textSize="14sp"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUname" />


    <Button
        android:id="@+id/login"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/mybutton"
        android:paddingLeft="48dp"
        android:paddingRight="48dp"
        android:text=" Sign In"
        android:textColor="#fff"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPasswd" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="monospace"
        android:padding="2dp"
        android:text="@string/or"
        android:textColor="#fff"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/mybutton"
        android:padding="16dp"
        android:text="@string/google"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/regBtn"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/mybutton"
        android:padding="16dp"
        android:text="Sign Up"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>